# mberry

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  AUDIT_04_INDEX.md  CHANGELOG.md  CLAUDE.md  CODEBASE_ORIENTATION.md  CONTRIBUTING.md  DESIGN.md  INTERACTIVE_ELEMENTS_AUDIT.md  MEMBER_INTERACTIVE_ELEMENTS_AUDIT.md  PRODUCT.md  QUICKSTART.md  README.md  ROADMAP.md  TODOS.md  UPDATING.md  VERSION  VERTICAL_TDD.md  bunfig.toml  docker-compose.yml  package.json  railway.json  test-setup-root.ts  turbo.json
.audits/: PRODUCTION_AUDIT.md
.context/: codex-session-id
.husky/: pre-commit
.oli/: config.json
.planning/: GAP-CLOSURE-ROADMAP.md  KNOWN-DEBT.md  MILESTONES.md  P0-P1-FIXES.md  P1-11-MEGA-MODULE-SPLIT-PLAN.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  SEQUENCING.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md  v1.2.0-MILESTONE-AUDIT.md
apps/account/src-tauri/: .gitignore  Cargo.toml  Info.plist  UPDATER.md  tauri.conf.json  tauri.ios.conf.json
apps/account/src-tauri/.cargo/: config.toml
apps/account/src-tauri/capabilities/: ios.json
apps/account/src-tauri/icons/: icon.icns
apps/account/src-tauri/src/: cadence_embed.rs  commands.rs  config.rs  lib.rs  main.rs  mobile.rs  tray.rs
apps/patient/src-tauri/: Cargo.toml  UPDATER.md  tauri.conf.json
apps/patient/src-tauri/capabilities/: default.json
apps/patient/src-tauri/js/: bundle.js
apps/patient/src-tauri/src/: db.rs  lib.rs  main.rs  mobile.rs  sync.rs  tray.rs
apps/patient/src-tauri/src/engine/: boa.rs  mod.rs
docs/: ARCHITECTURE.md  DOMAIN_GLOSSARY.md  HANDOFF.md  INDEX.md  MASTER_PRD.md  MODULE_MAP.md  MULTI-TENANT-AUDIT.md  PROJECT-STATUS.md  QA-COVERAGE-MATRIX.md  README.md  TEST_HONESTY.md  WAVE_C_FOUNDER_CHECKLIST.md
plans/: 000-execution-standards.md  001-friendly-officer-error-messages.md  001-special-assessment-cross-org-idor.md  002-bump-vulnerable-deps.md  002-unit-tests-orgpicker-usetiers.md  003-claude-md-handler-topology.md  003-housekeeping-querykey-and-readme.md  004-e2e-money-flows.md  004-refund-rounding-and-type-hole.md  005-dues-metrics-trailing-rates-nplus1.md  005-port-officer-flow-e2e-to-otp.md  006-dues-dashboard-error-retry.md  006-stripe-settle-authoritative-org-person.md  007-expiry-extension-month-end-overflow.md  007-router-error-boundary-and-404.md  008-auth-flow-hardening.md  008-onesignal-beta-spec-to-stable.md  009-form-validation-and-a11y-polish.md  009-surveys-feature-unit-tests.md  010-announcements-list.md  010-memberry-app-readme-and-architecture.md  011-deepen-dues-money-path-tests.md  011-membership-nav-shell.md  012-admin-route-test-coverage.md  012-membership-members-directory.md  013-admin-events-deeplink-env.md  013-membership-member-detail.md  014-admin-app-readme-and-architecture.md  014-membership-good-standing-certificate.md  015-membership-event-detail-checkin.md  016-membership-events-polish.md  017-membership-csv-export.md  018-membership-renewals.md  019-paid-events-paymongo.md  020-walkup-mark-paid.md  021-attendee-summary.md  022-member-payment-history.md  GOAL.md  README.md
scripts/: audit-e2e-depth-gate.ts  audit-e2e-depth.test.ts  rollback.sh  (+28 more)
services/api-ts-embedded/: .gitignore  .mise.toml  Cargo.toml  README.md  build.rs  package.json
services/api-ts-embedded/.cargo/: config.toml
services/api-ts-embedded/src/: db.rs  engine.rs  lib.rs
services/api-ts-embedded/src-js/: build.ts  entry.ts  web-api-shim.js
services/api-ts-embedded/src-js/shims/cloud/: aws-s3.ts  firebase.ts  google-storage.ts  smithy.ts  stripe.ts
services/api-ts-embedded/src-js/shims/node/: buffer.ts  crypto.ts  events.ts  process.ts  stream.ts  util.ts
services/api-ts-embedded/src-js/shims/npm/: ajv.ts  bcryptjs.ts  bun-sqlite.ts  concat-stream.ts  from2.ts  jimp.ts  nodemailer.ts  pg-boss.ts  pg.ts  pino.ts  readable-stream-passthrough.ts  readable-stream-transform.ts  readable-stream.ts  through2.ts
services/cadence/: Cargo.toml  Dockerfile  FIXME.md  README.md  build-docker.sh  docker-compose.deps.yml  docker-compose.stress.yml  mise.toml
services/cadence/benches/: README.md  change_log.rs  valkey_ops.rs
services/cadence/src/: api.rs  auth.rs  config.rs  conn.rs  identity.rs  lib.rs  main.rs  peer_status.rs  primary_reader.rs  protocol.rs  runtime.rs  schema.rs  state.rs  stream.rs  sync.rs  token.rs  transport.rs  ws.rs
services/cadence/src/applier/: mod.rs  pg.rs  sqlite.rs  tracker.rs
services/cadence/src/merge/: crdt.rs  lww.rs  mod.rs
services/cadence/src/storage/: backend.rs  common.rs  mod.rs  path.rs  sqlite.rs  valkey.rs
services/cadence/src/utils/: reconnect.rs
services/cadence/src/watcher/: mod.rs  pg_poll.rs  postgresql.rs  sqlite.rs
services/cadence/tests/chaos/: flapping_test.rs  mod.rs  partition_test.rs  resumable_catchup_test.rs
services/cadence/tests/e2e/: cloud_to_onprem_catchup_test.rs  full_stack_sync_test.rs  metadata_recovery_test.rs  mixed_transport_test.rs  mod.rs  multi_peer_test.rs  new_peer_join_test.rs  persistent_sync_test.rs  pg_watcher_null_updated_at_test.rs  postgres_postgres_test.rs  scope_filtered_sync_test.rs  sqlite_postgres_test.rs  sqlite_sqlite_test.rs  staging_iterate_test.rs  ws_sqlite_test.rs
services/cadence/tests/integration/: auth_integration_test.rs  health_api_test.rs  mod.rs  persistent_sync_test.rs  pg_applier_bool_test.rs  priority_ordering_test.rs  schema_integration_test.rs  scope_filter_diag_test.rs  scope_filter_staging_test.rs  sync_test.rs  transport_test.rs  watcher_postgres_test.rs  watcher_sqlite_test.rs  ws_sync_test.rs
services/cadence/tests/property/: crdt_properties.rs  lamport_properties.rs  lww_properties.rs  mod.rs  sync_properties.proptest-regressions  sync_properties.rs
services/cadence/tests/stress/: large_scale.rs  mod.rs  soak.rs
services/cadence/tests/unit/: applier_test.rs  auth_test.rs  catchup_checkpoint_test.rs  config_test.rs  crdt_test.rs  lww_test.rs  merge_router_test.rs  mod.rs  primary_reader_test.rs  protocol_test.rs  schema_test.rs  state_test.rs  storage_test.rs  stream_test.rs  token_test.rs  valkey_test.rs  watcher_initial_scan_test.rs
(+5082 files in other folders)
