[package]
name = "cadence"
version = "0.5.12"
edition = "2021"
description = "P2P sync engine with Iroh transport and pluggable conflict resolution"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
postcard = { version = "1", features = ["alloc"] }

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
fred = { version = "10", features = ["enable-rustls", "i-scripts", "sha-1"] }

# P2P transport
iroh = { version = "0.32", features = ["discovery-local-network"] }

# CRDT
loro = "1.4"

# Auth
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }

# Concurrency
dashmap = "6"

# HTTP health server + WebSocket
axum = { version = "0.8", features = ["ws"] }

# WebSocket client
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
async-trait = "0.1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Crypto
sha2 = "0.10"

# LRU cache for bounded memory
lru = "0.12"

# Platform directories
dirs = "6"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Time (display/logging only)
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Random number generation (for Iroh secret key generation)
rand = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3.14"
proptest = "1.4"
arbitrary = { version = "1.3", features = ["derive"] }
criterion = { version = "0.5", features = ["async_tokio"] }

[features]
default = []
integration-tests = []

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "property"
path = "tests/property/mod.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
required-features = ["integration-tests"]

[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"
required-features = ["integration-tests"]

[[test]]
name = "chaos"
path = "tests/chaos/mod.rs"
required-features = ["integration-tests"]

[[test]]
name = "stress"
path = "tests/stress/mod.rs"
required-features = ["integration-tests"]

[[bench]]
name = "valkey_ops"
harness = false

[[bench]]
name = "change_log"
harness = false
