[package]
name = "monobase-account"
version = "0.0.0"
description = "Monobase Account App - Offline-first reference app"
authors = ["Monobase Labs"]
license = "Proprietary"
repository = "https://github.com/monobaselabs/mono"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "account_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
# Cross-platform dependencies
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Cross-platform Tauri plugins
tauri-plugin-log = "2.0.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-opener = "2.5"
tauri-plugin-fs = "2.0"
tauri-plugin-http = "2.0"
tauri-plugin-clipboard-manager = "2.0"

# Embedded backend (api-ts wrapped in QuickJS via the api-ts-embedded crate)
api-ts-embedded = { path = "../../../services/api-ts-embedded" }
rusqlite = { version = "0.32", features = ["bundled"] }

# P2P sync engine (embedded, uses same SQLite via WAL mode)
cadence = { path = "../../../services/cadence" }

# For cadence_embed.rs (peer ID generation)
uuid = { version = "1", features = ["v4"] }

# ===== Platform-specific dependencies =====

# Desktop-only: Tauri with tray-icon and devtools + desktop UX plugins
[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
tauri = { version = "2.8.5", features = ["devtools", "tray-icon"] }
tauri-plugin-single-instance = "2.3.4"
tauri-plugin-updater = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-devtools = "2.0"
directories = "5.0"

# Mobile: Tauri with tray-icon + devtools
[target.'cfg(any(target_os = "ios", target_os = "android"))'.dependencies]
tauri = { version = "2.8.5", features = ["tray-icon", "devtools"] }
