[package]
name = "monobase-patient"
version = "0.0.0"
description = "Monobase Patient Portal - Offline-first healthcare app"
authors = ["Monobase Labs"]
license = "Proprietary"
repository = "https://github.com/monobaselabs/mono"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "patient_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
# Cross-platform dependencies
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Cross-platform Tauri plugins
tauri-plugin-log = "2.0.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-opener = "2.5"
tauri-plugin-fs = "2.0"
tauri-plugin-http = "2.0"
tauri-plugin-clipboard-manager = "2.0"

# Embedded backend (cross-platform)
boa_engine = "0.21"
rusqlite = { version = "0.32", features = ["bundled"] }

# P2P sync engine (embedded, uses same SQLite via WAL mode)
cadence = { path = "../../../services/cadence" }
flate2 = "1.0"
bcrypt = "0.16"
hmac = "0.12"
sha2 = "0.10"
sha1 = "0.10"
uuid = { version = "1", features = ["v4"] }
getrandom = "0.2"

# ===== Platform-specific dependencies =====

# Desktop-only: Tauri with tray-icon and devtools + desktop UX plugins
[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
tauri = { version = "2.8.5", features = ["devtools", "tray-icon"] }
tauri-plugin-single-instance = "2.3.4"
tauri-plugin-updater = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-devtools = "2.0"

# Mobile: Tauri without desktop features
[target.'cfg(any(target_os = "ios", target_os = "android"))'.dependencies]
tauri = { version = "2.8.5", features = ["devtools"] }
